feat: find all promotion unscoped endpoint
