# swaggerui/swagger.yaml
@@ -1625,7 +1625,7 @@ paths:
     get:
       tags:
         - Promotions
-      summary: GetPromotions
+      summary: FindAllPromotions
       responses:
         '200':
           description: OK
@@ -1646,6 +1646,46 @@ paths:
                       name: Discount 10%
                       amount: 10
                       deletedAt: null
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /internal/promotions:
+    get:
+      tags:
+        - Promotions
+      summary: FindAllPromotionsUnscoped
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+              example:
+                statusCode: 200
+                status: OK
+                data:
+                  - Name: Coupon Merdeka
+                    Description: Attractive coupon to get discount up to 10%
+                    Image:
+                    MinSpent: 20000
+                    coupon:
+                      id: 1
+                      name: Discount 10%
+                      amount: 10
+                      deletedAt: null
+                  - Name: Coupon HUT RI
+                      Description: Attractive coupon to get discount up to 10%
+                      Image:
+                      MinSpent: 20000
+                      coupon:
+                        id: 1
+                        name: Discount 10%
+                        amount: 10
+                        deletedAt: '2022-08-27T22:26:11.914412Z'
         '401':
           description: Unauthorized Error
           content:
